Tweaking the CSS for embed-container iframe, object and embed to see if this would fix the issue of the embedded videos not displaying on Safari

--- a/style.scss
+++ b/style.scss
@@ -313,15 +313,14 @@ nav {
   height: 0;
   padding-bottom: 56.25%;
   overflow: hidden;
-}
 
-.embed-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
+  iframe, object, embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .responsive {
